[project]
name = "multiprogress"
version = "0.1.0"
description = "Simple to use progress bar with multiprocessing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
]

[project.scripts]
multiprogress = "multiprogress:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multiprogress"]
